# keysmith

./: .gitignore  README.md
examples/: config.yaml
firmware/: platformio.ini
firmware/src/: main.cpp
host/: README.md  pyproject.toml
host/src/keysmith/: __init__.py  cli.py  config.py  discovery.py  keymap.py  protocol.py
host/tests/: test_cli.py  test_config.py  test_discovery.py  test_keymap.py  test_protocol.py
