[project]
name = "keysmith"
version = "0.1.0"
description = "Host CLI for the KeySmith USB HID keyboard relay."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "programus" }]
keywords = ["hid", "keyboard", "automation", "macos", "karabiner"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Embedded Systems",
]
dependencies = [
    "pyserial>=3.5",
    "pyyaml>=6.0",
    "typer>=0.12.0",
]

[project.scripts]
keysmith = "keysmith.cli:app"

[project.urls]
Repository = "https://github.com/programus/keysmith"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/keysmith"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.uv]
package = true
